--- a/radiology_center_app/pubspec.yaml
+++ b/radiology_center_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.9
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
