--- a/radiology_center_app/pubspec.yaml
+++ b/radiology_center_app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   image_picker: ^1.0.4
   image: ^4.1.7
   http: ^1.2.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
